istio-app-simple/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gitops-simple
  labels:
    istio-injection: enabled
    name: istio-gitops-simple
