istio-app-simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-gitops-service
  namespace: istio-gitops-simple
  labels:
    app: istio-gitops-app
    service: istio-gitops-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 9113
    targetPort: 9113
    protocol: TCP
    name: metrics
  selector:
    app: istio-gitops-app
