istio-app-simple/security.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: gitops-mtls
  namespace: istio-gitops-simple
spec:
  selector:
    matchLabels:
      app: istio-gitops-app
  mtls:
    mode: STRICT
  portLevelMtls:
    9113:
      mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: istio-gitops-dr
  namespace: istio-gitops-simple
spec:
  host: istio-gitops-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  portLevelSettings:
  - port:
      number: 9113
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-gitops-authz
  namespace: istio-gitops-simple
spec:
  selector:
    matchLabels:
      app: istio-gitops-app
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
  - from:
    - source:
        namespaces: ["istio-gitops-simple"]
  - to:
    - operation:
        ports: ["9113"]
    from:
    - source: {}
